--- a/main.ipynb
+++ b/main.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_4016\\2300294395.py:3: DeprecationWarning: 'imghdr' is deprecated and slated for removal in Python 3.13\n",
-      "  import imghdr\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -34,6 +25,16 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt"
    ]
   }
  ],
